--- a/src/app/component/advisors/advisors.component.html
+++ b/src/app/component/advisors/advisors.component.html
@@ -48,7 +48,7 @@
                             </thead>
                               <tr *ngFor="let portfolio of portfolios" [ngClass]="'tablerow'">
                                 <td>{{ portfolio.portfolioName}}</td>
-                                <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/portfolio/', portfolio.portfolioId]">View</button></td>
+                                <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/advisordetails/', portfolio.portfolioId]">View</button></td>
                               </tr>  
                             </table> 
                           </div>
