--- a/src/app/component/advisors/advisors.component.html
+++ b/src/app/component/advisors/advisors.component.html
@@ -48,7 +48,7 @@
                             </thead>
                               <tr *ngFor="let portfolio of portfolios" [ngClass]="'tablerow'">
                                 <td>{{ portfolio.portfolioName}}</td>
-                                <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/advisordetails/', portfolio.portfolioId]">View</button></td>
+                                <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/portfolio/', portfolio.portfolioId]">View</button></td>
                               </tr>  
                             </table> 
                           </div>
@@ -66,17 +66,18 @@
                 <table class="table table-bordered" id="advisorsTable" width="100%" cellspacing="0">
                   <thead>
                     <tr>
-                      <th>Portfolio Name</th>
+                      <th>Portfolio</th>
                       <!-- <th>Models</th> -->
                       <th>Advisor Name</th>
                       <th></th>
                     </tr>
                   </thead>
-                    <tr *ngFor="let portfolio of portfolios" [ngClass]="'tablerow'">
-                      <td>{{ advisor.portfolioId}}</td>
+                    <tr *ngFor="let advisor of advisors" [ngClass]="'tablerow'">
+                      <!-- <td>{{ advisor.portfolioId}}</td> -->
                       <!-- <td>{{ advisor.}}</td> -->
-                      <td>{{ advisor.advisorName}}</td>
-                      <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/portfolio/', portfolio.portfolioId]">View Portfolio</button></td>
+                      <!-- <td>{{ advisor.advisorName}}</td> -->
+                      <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/portfolio/', advisor.portfolioId]">View Portfolio</button></td>
+                      <td style="text-align:center;">{{advisor.advisorName}}</td>
                     </tr>  
                   </table> 
                 </div>
@@ -98,16 +99,13 @@
                               <div class="form-group">
                                   <label for="advisorName">Advisor Name</label>
                                   <input required type="text" maxlength="16" pattern="([0-9A-Za-z]{1,16})" class="form-control" id="advisorName" required [(ngModel)]="newadvisor.advisorName" name="advisorName" #portfolioName="ngModel">
-                                  <div [hidden]="advisorName.valid || advisorName.pristine"
-                                         class="alert alert-danger">
-                                         Advisor Name is required
-                                    </div>
+                                  
                                 </div>
 
                                 <div class="form-group">
                                   <label for="portfolioId">Portfolio to watch</label>
-                                  <select class="form-control" id="portfolioId" required [(ngModel)]="advisor.portfolioId" name="portfolioId" #portfolioId="ngModel">
-                                    <option *ngFor="let portfolio of portfolios" required [value]="portfolio">{{ portfolio.portfolioId}}</option>
+                                  <select class="form-control" id="portfolioId" required [(ngModel)]="newadvisor.portfolioId" name="portfolioId" #portfolioId="ngModel">
+                                    <option *ngFor="let portfolio of portfolios" required [value]="portfolio.portfolioId">{{ portfolio.portfolioName}}</option>
                                   </select>
                                 </div>
       
@@ -225,7 +223,7 @@
                           </div>
                         </div>
                         <div class="modal-footer">
-                          <button type="button" class="btn btn-dark" [disabled]="!advisorForm.form.valid"  (click)="addAdvisor()">Create</button>
+                          <button type="button" class="btn btn-dark"  (click)="addAdvisor()">Create</button>
                           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                           <!-- <button type="button" class="btn btn-dark" href="#" data-toggle="modal" data-target="#changePasswordModal">Save</button> -->
                         </div>
