--- a/src/app/component/advisors/advisors.component.html
+++ b/src/app/component/advisors/advisors.component.html
@@ -76,7 +76,7 @@
                       <!-- <td>{{ advisor.portfolioId}}</td> -->
                       <!-- <td>{{ advisor.}}</td> -->
                       <!-- <td>{{ advisor.advisorName}}</td> -->
-                      <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/portfolio/', advisor.portfolioId]">View Portfolio</button></td>
+                      <td style="text-align:center;"> <button type="button" class="btn btn-dark" [routerLink]="['/advisordetails', advisor.portfolioId]">View Portfolio</button></td>
                       <td style="text-align:center;">{{advisor.advisorName}}</td>
                     </tr>  
                   </table> 
