fixed news api css glitch causing fields to extend past table

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -91,7 +91,7 @@
               </div>
           </div>
 
-      <div [hidden]="shide">
+      <div [hidden]="hide">
         <!-- Page Heading -->
           <div class="col-12">
             <div class="card text-white bg-success mb-3">
