--- a/src/app/component/user-profile/user-profile.component.html
+++ b/src/app/component/user-profile/user-profile.component.html
@@ -48,8 +48,8 @@
 <div class="modal fade" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header" style="background-color: green">
-        <h5 class="modal-title" id="exampleModalLabel" style="color: white" >Change password?</h5>
+      <div class="modal-header" style="background-color: red">
+        <h5 class="modal-title" id="exampleModalLabel" style="color: white" >Please Update Your Password and Security Information</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
@@ -57,10 +57,6 @@
 <div class="container" style="background-color: whitemsoke">
   
   <form #registrationForm="ngForm" *ngIf="user">
-    <div class="form-group">
-      <label for="alterEgo">New Password</label>
-      <input type="password" class="form-control" id="password" required [(ngModel)]="user.password" name="password" #password="ngModel">
-    </div>
 
     <div class="form-group">
       <label for="recoveryQuestion">Recovery Question</label>
@@ -76,11 +72,34 @@
         </div>
     </div>
 
-    <div class="modal-footer" style="background-color: green">
+    <div class="form-group">
+      <label for="alterEgo">Existing Password</label>
+      <input type="password" class="form-control" id="password" required [(ngModel)]="oldPassword" name="oldPassword" #password="ngModel">
+    </div>
+
+    <div class="form-group">
+      <label for="alterEgo">New Password</label>
+      <input type="password" class="form-control" id="newPassword" required [(ngModel)]="tempPassword" 
+             name="newPassword" #newPassword="ngModel"
+             minlength="8" maxlength="24"
+             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
+             >
+             <div [hidden]="password.valid || password.pristine"
+             class="alert alert-danger">
+            Password is invalid
+            Please include at least 1 uppercase character, 1 lowercase character, and 1 number
+            Please make sure your password is at least 8 characters in length
+            </div>  
+    </div>
+
+    <div class="modal-footer" style="background-color: red">
       <button type="button" class="btn btn-dark" (click)="updateUser()" data-dismiss="modal">Save</button>
       <button class="btn btn-dark" type="button" data-dismiss="modal">Cancel</button>
       <!-- <button type="button" class="btn btn-dark" href="#" data-toggle="modal" data-target="#changePasswordModal">Save</button> -->
     </div>
+
+  
+
   </form>
 </div>
 </div>
